--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ toml = "0.8"
 ratatui = "0.29"
 crossterm = "0.28"
 unicode-width = "0.2"
+tui-markdown = "=0.3.1"
 
 [dev-dependencies]
 tempfile = "3"
