--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ ratatui = "0.29"
 crossterm = "0.28"
 unicode-width = "0.2"
 tui-markdown = "=0.3.1"
+toml_edit = "0.24.0"
 
 [dev-dependencies]
 tempfile = "3"
