--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,8 +54,8 @@ toml = "0.8"
 ratatui = "0.29"
 crossterm = "0.28"
 unicode-width = "0.2"
-tui-markdown = "=0.3.1"
 toml_edit = "0.24.0"
+pulldown-cmark = "0.13.0"
 
 [dev-dependencies]
 tempfile = "3"
