--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ crossterm = "0.28"
 unicode-width = "0.2"
 toml_edit = "0.24.0"
 pulldown-cmark = "0.13.0"
+arboard = "3"
+image = { version = "0.25", default-features = false, features = ["png"] }
 
 [dev-dependencies]
 tempfile = "3"
